<resources>
    <string name="app_name">Darts Scoring System</string>
    <string name="version">Version: 1.5.1.1</string>
    <string name="Nothing"> </string>
    <string name="Reg">-<u>REGULAR GAME</u></string>
    <string name="Split">Split Score</string>
    <string name="Regular">Regular</string>
    <string name="Cricket">Cricket</string>
    <string name="Killer">Killer</string>
    <string name="AroundTheWorld">Around The World</string>
    <string name="Shanghai">Shanghai</string>
    <string name="MoreGames">New games coming soon. \nStay tuned!</string>
    <string name="Description">description</string>
    <string name="Start">Start</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="StartingPointsDots">Starting points:</string>
    <string name="RegGame">Each player starts with a score of: 180, 301, 501, 701 or 901; and takes turns to throw 3 darts.  The score for each turn is calculated and deducted from the players total.  Bullseye scores 50, the outer ring scores 25 and a dart in the double or triple ring counts double or triple the segment score.  The objective is to be the first player to reduce the score to exactly zero.
If a player reduces the score below zero, the score is bust, that turn ends immediately and the score is returned to what it was at the start of that turn.  e.g. if a player has 32 to go out and the first dart is a 16, the second is a 20, the player is bust and the score is returned to 32.  So on the last turn, it is not necessary to throw all 3 darts - a player can win with the first or second dart of the turn.</string>
    <string name="Return">Return</string>
    <string name="zero">0</string>
    <string name="undo">undo</string>
    <string name="dart">dart</string>
    <string name="playerShort">PL</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="playerThree">Player 3</string>
    <string name="playerFour">Player 4</string>
    <string name="playerFive">Player 5</string>
    <string name="playerSix">Player 6</string>
    <string name="playerOnee">Player 1:</string>
    <string name="playerTwoo">Player 2:</string>
    <string name="playerThreee">Player 3:</string>
    <string name="playerFourr">Player 4:</string>
    <string name="playerFivee">Player 5:</string>
    <string name="playerSixx">Player 6:</string>
    <string name="Winner2">Winner is player 2</string>
    <string name="NewGame">New Game</string>
    <string name="twoTimes">2x</string>
    <string name="threeTimes">3x</string>
    <string name="fourTimes">4x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyFive">25</string>
    <string name="fifty">50</string>
    <string name="bull">BULL</string>
    <string name="oneEighty">180</string>
    <string name="threeZeroOne">301</string>
    <string name="fiveZeroOne">501</string>
    <string name="sevenZeroOne">701</string>
    <string name="nineZeroOne">901</string>
    <string name="startingPoints">-<u>Starting points:</u></string>
    <string name="startingPointsDes">Pick <b>starting points</b> for your game. \nStarting points: 180, 301, 501, 701 or 901.</string>
    <string name="numOfPlayers">-<u>Number of players:</u></string>
    <string name="numOfPlayersDots">Number of players:</string>
    <string name="numOfPlayersDes">Pick how many people will play. \nUp to <b>6 players</b> can play at the same time.</string>
    <string name="equal">-<u>Equal:</u></string>
    <string name="equalDots">Equal:</string>
    <string name="equalDes">You can choose the <b>equal</b> option to be ON or OFF. \nIf the option is <b>OFF</b> then the first player that reaches zero is the winner. \nIf the option is <b>ON</b> then players below the player that reached zero first can still catch up. \n<u>Example:</u> There are 6 players playing darts and player #2 gets to zero first with 2 darts. Players below him continue to play the same round. \n 1. Player #4 gets to zero in just 1 dart. \n\t\t\tPlayer #4 is the winner. \n 2. Player #4 gets to zero in 3 darts.  \n\t\t\tPlayer #2 is the winner. \n 3. Player #4 gets to zero in 2 darts.  \n\t\t\tIt is a tie between player #2  \n\t\t\tand player #4 and a tie brake is  \n\t\t\ttaking place.  \n\t\t\tBoth players throw only one dart  \n\t\t\tand who hits a larger number  \n\t\t\tis the winner. </string>
    <string name="indicator">-<u>Indicator:</u></string>
    <string name="indicatorDots">Indicator:</string>
    <string name="indicatorDes">Indicator is a tool that shows what target to hit in order to win as quickly as possible. \nThe indicator will be blank if there aren\'t any combinations with which a player can win in that round and it will always show the highest available targets for a winning combination.</string>
    <string name="winnerplayer1">Winner is player 1</string>
    <string name="winnerplayer2">Winner is player 2</string>
    <string name="winnerplayer3">Winner is player 3</string>
    <string name="winnerplayer4">Winner is player 4</string>
    <string name="winnerplayer5">Winner is player 5</string>
    <string name="winnerplayer6">Winner is player 6</string>
    <string name="PickGame">Pick a game:</string>
    <string name="TimesFour">4x:</string>
    <string name="TimesFourDots">-4x:</string>
    <string name="TimesFourDes">You can choose the <b>times four</b> \noption to be ON or OFF. \nIf the option is <b>ON</b> then you \nhave an extra round.</string>
    <string name="Miss">Miss</string>
    <string name="Hit">Hit</string>
    <string name="Target">Target: 15</string>
    <string name="TargetShanghai">Target: 1</string>
    <string name="Round">Round: 1</string>
    <string name="Score">Score</string>
    <string name="SplitScoreStartingPoints">40</string>
    <string name="AroundTheWorldStartingPoints">1</string>
    <string name="DartsCountForATW">Darts count: 0</string>
    <string name="Add">Add</string>
    <string name="Splt">-<u>SPLIT SCORE</u></string>
    <string name="SplitScoreGame">Each player starts with a score of 40 and must hit the designated number for each round to win additional points. If a player misses the target with all three darts, his points are halved. There are 9 rounds and an additional round, if the option Times Four is turned on. Winner is the player who has more points at the end of the game.</string>
    <string name="Crckt">-<u>CRICKET</u></string>
    <string name="Kllr">-<u>KILLER</u></string>
    <string name="KillerGame">The goal is to "kill" every other player in the game. Every player has his target number - usually picked by throwing one dart at the dartboard with his/her non-dominant hand (but players can choose their targets if all of the players agree). If a player hits a number that\'s already taken or misses the dartboard, he/she gets another try. To "kill" someone, a player has to become a killer first. To become a killer, a player has to hit a double of his/her target number (to make a game more challenging, you can pick a different option so that a player needs to hit a double of his/her target number 2 or 3 times before becoming a killer). You can\'t hit your regular number twice and count it as a hit, it needs to be a direct double of your target number. After becoming a killer, the player can attack other players by hitting a double of their target number (again, only direct double hits are counted). Every player has 3 lives, losing all 3 of them means the player is out of the game. After becoming a killer, every player can hurt and eventually kill themselves by accidentally throwing a dart at a double of his/her target number.</string>
    <string name="CricketGame">The goal is to be the first player to close all the cricket numbers and have a higher or even score with the highest score in the game. Cricket numbers are: 20, 19, 18, 17, 16, 15 and Bullseye. Player needs to hit a cricket number three times to close it. There is a table of numbers to keep track of how many times one player hit a number. Player will gain points after hitting the closed number, until every other player has closed that number. Hitting Times Two will count as hitting the number twice, the same goes for Times Three, Times Four and inner Bullseye. If a player has closed all the numbers, but his score is not higher than everyone else, the game continues. There are 20 rounds and if no one closed every number at the end of the 20th round, player with the highest total points (sum of every number that he hit and his score) wins.</string>
    <string name="RndTWrld">-<u>AROUND THE WORLD</u></string>
    <string name="AroundTheWorldGame"><b>A.K.A.</b> <i>Around the clock</i>\nTo win this game a player needs to hit every number starting from 1 and ascending to 20, after which he needs to hit 25 and 50 (in that order). If the game seems too easy, players can make an agreement to count only doubles or trebles (three times) of the target. Players take turns throwing three darts and if one player hits his last target, players that started after him can still catch up. If multiple players finish on the same round, winner is the player with least darts thrown. If two or more players finished and have the same number of thrown darts, a tie break is played. Each player has three darts to shoot the Bullseye (worth 50) and whoever hits the target with more darts is the winner. If two or more players hit the same number of Bullseyes, they take another tie break until someone wins.</string>
    <string name="PickEntryNumber">Number of hits needed to become a killer:</string>
    <string name="PickEntryNumberDots">-<u>Number of hits needed to become a killer:</u></string>
    <string name="NumberOfHitsExplained">Pick a number that represents how many times does one player have to hit a double of his/her number to become a killer.</string>
    <string name="Name">Name</string>
    <string name="NameDots">-<u>Name:</u></string>
    <string name="NameExplained">Write every player\'s name or leave it blank and the app will fill it.</string>
    <string name="Trg">Target</string>
    <string name="TrgDots">-<u>Target:</u></string>
    <string name="TrgExplained">Write every player\'s target. \nIt can\'t be blank.</string>
    <string name="X">X</string>
    <string name="Life">o\t\t\to\t\t\to</string>
    <string name="Player">Player</string>
    <string name="Number">Number</string>
    <string name="Shngh">-<u>SHANGHAI</u></string>
    <string name="ShanghaiGame">In the dart game Shanghai, each player takes turns throwing three darts to try to score the highest possible points in each round. A standard game uses the segments 1 through 20, in order. In the first round, players aim for the 1 segment. In the second round, players aim for the 2 segment, and so on through 20. Doubles and triples are in play, so scoring a triple 1 awards three points to that player. The object is to have the highest score at the end of all rounds, or to "Shanghai" your opponent. A Shanghai is when a player scores on a single, double, and triple of the same number in one round. For example, if in the fourth round of a standard game a player hits a single 4, double 4, and triple 4, they automatically win.</string>
</resources>