<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GameDescription">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reg"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/regGame"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegGame"
            android:id="@+id/regGameDes"
            android:layout_below="@id/regGame"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regGameDes"
            android:text="@string/Splt"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/splScore"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SplitScoreGame"
            android:id="@+id/splScoreDes"
            android:layout_below="@id/splScore"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/splScoreDes"
            android:text="@string/Crckt"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/cricket"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CricketGame"
            android:id="@+id/cricketDes"
            android:layout_below="@id/cricket"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cricketDes"
            android:text="@string/Kllr"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/killer"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KillerGame"
            android:id="@+id/killerDes"
            android:layout_below="@id/killer"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/killerDes"
            android:text="@string/RndTWrld"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/aroundTheWorld"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AroundTheWorldGame"
            android:id="@+id/aroundTheWorldDes"
            android:layout_below="@id/aroundTheWorld"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aroundTheWorldDes"
            android:text="@string/Shngh"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/shanghai"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShanghaiGame"
            android:id="@+id/shanghaiDes"
            android:layout_below="@id/shanghai"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/returnToPickingTheGames"
            android:layout_below="@id/shanghaiDes"
            android:layout_marginTop="10dp"
            android:text="@string/Return"
            android:textStyle="italic|bold"
            android:textSize="25sp"
            android:onClick="setReturnToPickingTheGames"
            android:background="@drawable/oval"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>
</ScrollView>