<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GameDescription">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startingPoints"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/startingPoints"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startingPointsDes"
            android:id="@+id/startingPointsDes"
            android:layout_below="@id/startingPoints"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startingPointsDes"
            android:text="@string/numOfPlayers"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/numOfPlayers"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numOfPlayersDes"
            android:id="@+id/numofPlayersDes"
            android:layout_below="@id/numOfPlayers"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/numofPlayersDes"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/equal"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equalDes"
            android:id="@+id/equalDes"
            android:layout_below="@id/equal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/equalDes"
            android:text="@string/indicator"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:id="@+id/indicator"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicatorDes"
            android:id="@+id/indicatorDes"
            android:layout_below="@id/indicator"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="italic"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/returnToPickingTheParameters"
            android:layout_below="@id/indicatorDes"
            android:layout_marginTop="10dp"
            android:text="@string/Return"
            android:textStyle="italic|bold"
            android:textSize="25sp"
            android:onClick="setReturnToPickingTheParameters"
            android:background="@drawable/oval"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>
</ScrollView>