<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".Cricket">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numOfPlayersDots"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:id="@+id/numberOfPlayers"
        android:textColor="#112406"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberOfPlayers"
        android:id="@+id/firstRowOfPlayers"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twoPlayers"
            android:text="@string/two"
            android:textSize="30sp"
            android:layout_toStartOf="@id/threePlayers"
            android:layout_toLeftOf="@id/threePlayers"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:onClick="playersTwo"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/threePlayers"
            android:text="@string/three"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:onClick="playersThree"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/fourPlayers"
            android:layout_toEndOf="@id/threePlayers"
            android:layout_toRightOf="@id/threePlayers"
            android:text="@string/four"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="playersFour"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/firstRowOfPlayers"
        android:id="@+id/secondRowOfPlayers">
        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/practiceButton2"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fivePlayers"
            android:layout_toStartOf="@id/practiceButton2"
            android:layout_toLeftOf="@id/practiceButton2"
            android:text="@string/five"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="playersFive"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sixPlayers"
            android:layout_toEndOf="@id/practiceButton2"
            android:layout_toRightOf="@id/practiceButton2"
            android:text="@string/six"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="playersSix"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimesFour"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@id/secondRowOfPlayers"
        android:id="@+id/timesFour"
        android:textColor="#112406"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/timesFour"
        android:id="@+id/rowOfTimesFour">
        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/practiceButton3"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/on"
            android:layout_toStartOf="@id/practiceButton3"
            android:layout_toLeftOf="@id/practiceButton3"
            android:text="@string/On"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="set4xOn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/off"
            android:layout_toEndOf="@id/practiceButton3"
            android:layout_toRightOf="@id/practiceButton3"
            android:text="@string/Off"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="set4xOff"/>
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:layout_marginTop="18dp"
        android:layout_below="@id/rowOfTimesFour"
        android:layout_centerHorizontal="true"
        android:text="@string/Start"
        android:textStyle="bold"
        android:textSize="50sp"
        android:onClick="activatingCricket"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionCricket"
        android:layout_below="@id/start"
        android:layout_marginTop="5dp"
        android:text="@string/Description"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        android:onClick="openCricketParametersDescription"
        android:background="@drawable/oval"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/returnToPickingTheGames"
        android:layout_below="@id/descriptionCricket"
        android:layout_marginTop="5dp"
        android:text="@string/Return"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        android:onClick="setReturnToPickingTheGames"
        android:background="@drawable/oval"/>
</RelativeLayout>